<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/right"
                app:layout_constraintStart_toStartOf="@+id/left"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/lblEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/walker_editing_mode"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edtUsername"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/right"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/left" />

            <EditText
                android:id="@+id/edtPassword3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/edtPassword"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/right"
                app:layout_constraintStart_toStartOf="@+id/left"
                app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

            <EditText
                android:id="@+id/edtReEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/re_enter_password"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/right"
                app:layout_constraintStart_toStartOf="@+id/left"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_first_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/right"
                app:layout_constraintStart_toStartOf="@+id/left"
                app:layout_constraintTop_toBottomOf="@+id/edtReEnter" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_last_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/right"
                app:layout_constraintStart_toStartOf="@+id/left"
                app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/right"
                app:layout_constraintStart_toStartOf="@+id/left"
                app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="changeWalker"
                android:text="@string/change"
                app:layout_constraintEnd_toStartOf="@+id/right"
                app:layout_constraintStart_toStartOf="@+id/left"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:onClick="onReturnClicked"
                android:text="@string/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/right"
                app:layout_constraintStart_toStartOf="@+id/left" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>