<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PurpleGreenBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/lblEdit">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edtUsername"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/left"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="565dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edtPassword"
            android:inputType="textPersonName|textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintStart_toStartOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="309dp" />

        <EditText
            android:id="@+id/edtReEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/re_enter_password"
            android:inputType="textPersonName|textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintStart_toStartOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="362dp" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintStart_toStartOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/edtReEnter"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="415dp" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintStart_toStartOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/edtFirstName"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="468dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintStart_toStartOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/edtLastName"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="521dp" />

        <Button
            android:id="@+id/btnChange"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerUser"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintStart_toStartOf="@+id/left"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="363dp"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="253dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/thanks_for_taking_the_first_step"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="345dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>